import javax.swing.JFrame;
import javax.swing.JPanel;
public class main {
    public static void main(String[] args) {
        MainScreen screened = new MainScreen();
        screened.showScreen();

    }
}
