@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class CommonFunctions {
        + CommonFunctions()
        + addingBackgroundPhoto()
        + createButton()
        + createFrame()
        + createFrameWithPanel()
        + createPanel()
    }
  }
  

  namespace  {
    class Game {
        ~ frame : JFrame
        ~ i : int
        ~ p : JPanel
        ~ text : char[]
        ~ x : int
        ~ y : int
        + Game()
        + startGame()
        - sentence2char()
        - showCurrentLetter()
    }
  }
  

  namespace  {
    class GameMenu {
        - level : int
        + GameMenu()
    }
  }
  

  namespace  {
    class MainScreen {
        - x : int
        - y : int
        + MainScreen()
        + showScreen()
    }
  }
  

  namespace  {
    class main {
        {static} + main()
    }
  }
  

  MainScreen o-- CommonFunctions : functions
  MainScreen o-- Game : game


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
